<?xml version="1.0"?>
<package format="2">
  <name>urg_stamped</name>
  <version>0.0.14</version>
  <description>Precisely stamped URG driver for ROS</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>Apache 2.0</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>

  <depend>sensor_msgs</depend>
</package>
